recursion.lessons.recursion.spiral.Spiral.scala.code
def spiral(steps:Int, angle:Int, length:Int, increment:Int)    {

	avance(length)
	gauche(angle)
	spiral(steps,angle,length+increment,increment)
	steps=steps -1

}
